package consts;

public interface Consts {
    double PI = 3.1415926535897932384626433832795;

    int DEGREE = 2;
    int MULTIPLE_OF_TWO = 2;
    int MULTIPLE_OF_THREE = 3;
    int AREA_DIVIDER = 2;
    int TWO_POINTS = 2;
    int THREE_POINTS = 3;
    int FOUR_POINTS = 4;
    int TWO_DIMENSIONAL_TWO_POINTS = 4;
    int TWO_DIMENSIONAL_THREE_POINTS = 6;
    int TWO_DIMENSIONAL_FOUR_POINTS = 8;
    int THREE_DIMENSIONAL_TWO_POINTS = 6;
    int THREE_DIMENSIONAL_THREE_POINTS = 9;
    int THREE_DIMENSIONAL_FOUR_POINTS = 12;
    int FIRST_RADIX = 0;
    int SECOND_RADIX = 1;
    int THIRD_RADIX = 2;
}